k8s-nginx-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserv
spec:
  selector:
    matchLabels:
      app: webserv
  replicas: 2 
  template:
    metadata:
      labels:
        app: webserv
    spec:
      containers:
      - name: webserv
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webserv
  labels:
    run: webserv
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webserv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserv
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserv
                port: 
                  number: 80
